# remorac

./: .gitignore  pyproject.toml
docs/: ABI.md  BENCHMARK_BASELINES.json  BUFFER_REUSE_PLAN.md  CNN_GRADIENT_NATIVE_COMPILE_SCALABILITY.md  CRATER_ML_PLAN.md  DENSE_CORE.md  DEPENDENT_TYPES_IMPLEMENTATION_PLAN.md  DESCRIPTOR_EXPORT_GAP.md  FULL_REMORA_PLAN.md  HOW_TO_RUN.md  ILGPU_ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN_UPDATE.md  MLIR_ARCHITECTURE.md  MLIR_IMPLEMENTATION_PLAN.md  MLIR_TOOLCHAIN.md  NEW_AD_PLAN.md  NEXT_STEPS_after_AD.md  PROJECT_STATUS_before_phase_7.md  USER_GUIDE.md  automatic-differentiation-proposal.md  codex-prompt-crater-plan.txt  codex_response.md  deepseek-evaluation.md  deepseek-plan.md  gemini-notes.txt  gemini.prompt  jupyter-integration-plan.md  jupyter_tutorial.ipynb  mlir-pipeline-cpu.txt  mlir-pipeline-fusion.txt  mlir-pipeline-nvidia.txt  next.txt  phase1-prompt.md
examples/: bool_logic.remora  chained_maps.remora  cnn.remora  conditional.remora  crater_train.py  craters-training.lisp  craters.example  craters.md  craters_old.lisp  dot_product.remora  function_application.remora  indexing.remora  integration.lisp  lift_map.remora  matrix_row_reduce.remora  nested_let.remora  prelude_scale.remora  prelude_sum.remora  rank10_indexing.remora  rank10_map.remora  rank10_rank.remora  rank10_shape.remora  rank3_map.remora  rank4_map.remora  rank_polymorphism.lisp  reduce_iota.remora  row_norms.remora  scalar_arithmetic.remora  scalar_branching.remora  scans.lisp  section_right.remora  shape_rank.remora  views.lisp  (+3 more)
(+153 files in other folders)
