[project]
name = "remora"
version = "0.0.0"
description = "Remora Dense Core compiler prototype"
readme = "docs/MLIR_IMPLEMENTATION_PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "cuda-python",
    "ipython>=9.14.0",
    "iree-compiler",
    "jupyterlab>=4.5.7",
    "lark",
    "numpy",
    "pandas>=3.0.3",
]

[project.scripts]
remorac = "remora.cli:main"
remora = "remora.repl:main"
remora-bench = "remora.benchmark:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
